--- a/external_packages/package/first-package/Config.in
+++ b/external_packages/package/first-package/Config.in
@@ -2,4 +2,4 @@
 config BR2_PACKAGE_FIRST_PACKAGE
 	bool "first-package"
 	help
-	  This is a external package for buildroot
+	  This is an external package for buildroot
